Fixed config to instantiate classes, working on calcDisc

--- a/resources/CourseRegister.config
+++ b/resources/CourseRegister.config
@@ -1,3 +1,3 @@
 IExtraFeeCalculator.class.name=BDTaxAdapter
-BestForNSU.class.name=BestForNSU
-BestForStudent.class.name=BestForStudent
+BestForNSU.class.name=assignment.discountstrategies.BestForNSU
+BestForStudent.class.name=assignment.discountstrategies.BestForStudent
